Version 2.1.144
    Fixed a bug where Roll wouldn't award XP when fall height was over a certain amount
    Lowered the XP ceiling of Roll
    Fixed a NPE that would happen involving taming in combat processing
    Updated hu_HU locale (thanks andris155)
    mmodebug mode now prints some information when fuel efficiency is applied to a furnace



Version 2.1.143
    mcMMO now tracks super ability boosted items through persistent metadata
    mcMMO no longer relies on lore to tell if an item has been modified by a super ability
    Slight buff to Rupture (1 more tick duration across all ranks)
    Lore no longer gets added to items being buffed by mcMMO./

    NOTES:
        The item tracking is persistent for MC versions 1.13-1.16.2 (and beyond). However the code handling the persistence for 1.13.2 differs from the other versions. It shouldn't result in any problems.
        Any items that currently have the old "mcMMO Ability Tool" lore on them will have that lore stripped off them and will have any dig speed enchants removed. This should only affect glitched items that never properly got their buffs removed.

Version 2.1.142
    Iron Arm Style renamed to Steel Arm Style
    Steel Arm Style now scales over 20 ranks instead of 5
    Added 'mcmmo.ability.unarmed.steelarmstyle' permission node
    Removed 'mcmmo.ability.unarmed.ironarmstyle' permission node
    Added locale entry 'Unarmed.SubSkill.SteelArmStyle.Name'
    Added locale entry 'Unarmed.SubSkill.SteelArmStyle.Description'
    Updated locale entry 'Unarmed.Ability.Bonus.0'

Version 2.1.141
    Added some missing values for 1.16.2 compatibility modes

Version 2.1.140
    Fixed a few potential issues with scoreboards
    Updated polish locale

    NOTES:
    Scoreboards code in mcMMO is pretty messy and poorly designed, I am going to rewrite it in a future update. The fixes applied in this patch should solve some problems some users were having for now.

Version 2.1.139